# frankenjax

./: .gitignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  Cargo.toml  EXISTING_JAX_STRUCTURE.md  FEATURE_PARITY.md  PARITY-COVERAGE.md  PROPOSED_ARCHITECTURE.md  README.md  TODO_SUPER_DETAILED_PORT_AND_PARITY.md
crates/fj-backend-gpu/: Cargo.toml
crates/fj-backend-gpu/src/: lib.rs
crates/fj-conformance/: Cargo.toml
crates/fj-conformance/fixtures/: README.md  composition_oracle.v1.json  dtype_promotion_oracle.v1.json  linalg_fft_oracle.v1.json
crates/fj-conformance/fixtures/rng/: rng_determinism.v1.json
crates/fj-conformance/fixtures/transforms/: legacy_transform_cases.v1.json  legacy_transform_cases.v1.json.raptorq
crates/fj-conformance/fuzz/: Cargo.toml
crates/fj-conformance/fuzz/corpus/fft_roundtrip/: pow2_len4  pow2_len64  pow2_len8
crates/fj-conformance/fuzz/corpus/fixture_bundle_loader/: default_comparator_hardened.json  empty_bundle_valid.json  grad_square_scalar.json  jit_add2_i64.json  jit_add_one_scalar.json  lax_broadcasted_iota_no_args.json  lax_complex_scalar.json  lax_concatenate_vectors.json  lax_reshape_tensor.json  malformed_truncated.json  rejected_simulated_delay.json  unknown_fixture_value_kind.json  vmap_add_one_vector.json
crates/fj-conformance/fuzz/corpus/partial_eval_fuzzer/: binary_mixed  mixed_2inputs  random_mix_1
crates/fj-conformance/fuzz/corpus/primitive_eval_fuzzer/: abs_negative  add_f64_scalars  add_f64_vectors  add_u32_scalars  argsort_vec  bitand_mask  bitcast_one  bitcast_zero  bitnot_zero  bitor_mask  bitxor_same  cbrt_negative  cbrt_positive  cbrt_zero  ceil_frac  clz_one  concat_vecs  cond_false_path  cond_true_path  cond_zero_values  conv_simple  copy_scalar  cos_zero  cumprod_vec  cumsum_vec  digamma_one  digamma_two  div_by_zero  eq_same  erf_zero  erfc_zero  erfinv_half  erfinv_zero  exp_f64_one  expm1_zero  floor_frac  gt_greater  lgamma_half  lgamma_large  lgamma_one  (+44 more)
crates/fj-conformance/fuzz/corpus/primitive_params_fuzzer/: seed_reshape  seed_slice
crates/fj-conformance/fuzz/corpus/shape_inference_engine/: add_rank_broadcast  argsort_2d  broadcast_in_dim  broadcasted_iota_rank3  chol_3x3  complex_pair  concatenate_axis  cond_branches  conj_complex  conv_1d_3chan  conv_2d_batch  cumprod_1d  cumsum_2d  cumsum_axis  dot_matrix_vector  dynamic_slice_window  dynamic_update_slice_rank2  eigh_sym_4x4  expand_axis0  fft_vec8  gather_2d  gather_rank2_indices  ifft_vec8  imag_complex  iota_dtype_length  irfft_vec9  onehot_5cls  pad_2d  pad_low_high_interior  qr_3x3_matrix  real_complex  reduce_max_axis0  reduce_prod_full  reduce_sum_axes  reduce_sum_axis1  reduce_window_dims  reshape_rank_change  rev_axes  rev_axis1  rfft_vec16  (+15 more)
crates/fj-conformance/fuzz/corpus/smoke_harness_json/: fixture_note_empty_strings  fixture_note_extra_fields  fixture_note_long_suite  fixture_note_long_unicode  fixture_note_minimal  fixture_note_missing_notes  fixture_note_nested_brackets  fixture_note_newlines  malformed_truncated  (+13 more)
crates/fj-conformance/fuzz/fuzz_targets/: ad_gradient_computation.rs  common.rs  egraph_rewrite_rules.rs  fft_roundtrip.rs  fixture_bundle_loader.rs  fuzz_target_1.rs  jaxpr_serde_roundtrip.rs  ledger_deserializer.rs  partial_eval_fuzzer.rs  primitive_eval_fuzzer.rs  primitive_params_fuzzer.rs  proc_status_parser.rs  shape_inference_engine.rs  smoke_harness_json.rs  value_deserializer.rs
crates/fj-conformance/scripts/: capture_composition_oracle.py  capture_dtype_promotion_oracle.py  capture_legacy_fixtures.py  capture_linalg_fft_oracle.py
crates/fj-conformance/src/: architecture_decision.rs  cache_lifecycle.rs  decision_ledger.rs  durability.rs  e2e_log.rs  error_taxonomy.rs  lib.rs  memory_performance.rs  numerical_stability.rs  onboarding_command.rs  optimization_hotspots.rs  oracle_recapture.rs  security_adversarial.rs  transform_control_flow.rs  ttl_semantic.rs
crates/fj-conformance/src/snapshots/: fj_conformance__tests__parity_markdown_snapshot.snap
crates/fj-conformance/tests/: abs_oracle.rs  acos_oracle.rs  acosh_oracle.rs  ad_numerical_verification.rs  add_sub_oracle.rs  api_transforms_oracle.rs  architecture_boundary_gate.rs  argmin_argmax_oracle.rs  argsort_oracle.rs  array_creation_oracle.rs  artifact_schemas.rs  asin_oracle.rs  asinh_oracle.rs  atan2_oracle.rs  atan_oracle.rs  atanh_oracle.rs  backend_bridge_oracle.rs  bessel_oracle.rs  betainc_oracle.rs  bitcast_oracle.rs  bitwise_ops_oracle.rs  bitwise_oracle.rs  broadcast_in_dim_oracle.rs  broadcasted_iota_oracle.rs  cache_keying_oracle.rs  cache_lifecycle_gate.rs  cbrt_oracle.rs  ceil_oracle.rs  clamp_oracle.rs  clz_oracle.rs  comparison_ops_oracle.rs  complex_ops_oracle.rs  complex_oracle.rs  composition_oracle_parity.rs  concatenate_oracle.rs  control_flow_conformance.rs  control_flow_oracle.rs  conv_oracle.rs  convert_element_type_oracle.rs  copy_oracle.rs  (+127 more)
crates/fj-conformance/tests/snapshots/: value_serialization_snapshots__snapshot_scalar_complex.snap  value_serialization_snapshots__snapshot_scalar_f64.snap  value_serialization_snapshots__snapshot_tensor_1d_f64.snap  value_serialization_snapshots__snapshot_tensor_scalar_shape.snap  value_serialization_snapshots__snapshot_tensor_special_f64.snap
crates/fj-egraph/: Cargo.toml
crates/fj-egraph/benches/: egraph_baseline.rs
crates/fj-egraph/src/: lib.rs
crates/fj-ffi/: Cargo.toml
crates/fj-ffi/benches/: ffi_baseline.rs
crates/fj-ffi/src/: buffer.rs  call.rs  callback.rs  error.rs  lib.rs  marshal.rs  registry.rs
crates/fj-py/: Cargo.toml  pyproject.toml
crates/fj-py/src/: lib.rs
crates/fj-py/tests/: smoke_test.py
crates/fj-runtime/: Cargo.toml
crates/fj-runtime/src/: backend.rs  buffer.rs  device.rs  lib.rs
crates/fj-runtime/src/snapshots/: fj_runtime__tests__frankentui_status_card.snap
crates/fj-trace/: Cargo.toml
crates/fj-trace/benches/: trace_baseline.rs
crates/fj-trace/src/: lib.rs
crates/fj-trace/tests/: nested_trace_contexts.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cache_deserialize.rs  fuzz_cache_roundtrip.rs  fuzz_primitive_eval.rs
(+1308 files in other folders)
