[package]
name = "fj-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
# test-internals required: asupersync 0.3.4's DetBuildHasher::for_production()
# (the default in non-test builds) returns a freshly RANDOM-seeded hasher on every
# build_hasher() call, violating the BuildHasher contract — so every DetHashMap key
# hashes differently per operation and the RaptorQ DecodingPipeline's block_counts map
# is corrupt downstream (decode always fails "insufficient symbols", even with all
# symbols present). The test-internals feature swaps in DetHasher::for_lab() (a stable
# fixed seed), restoring a correct BuildHasher. Tracked upstream as asupersync-2l21sv.
asupersync = { version = "0.3.4", features = ["test-internals"] }
base64 = "0.22.1"
fj-cache = { path = "../fj-cache" }
fj-core = { path = "../fj-core" }
fj-ad = { path = "../fj-ad" }
fj-dispatch = { path = "../fj-dispatch" }
fj-egraph = { path = "../fj-egraph" }
fj-interpreters = { path = "../fj-interpreters" }
fj-lax = { path = "../fj-lax" }
fj-ledger = { path = "../fj-ledger" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
smallvec = { workspace = true }

[dev-dependencies]
fj-api = { path = "../fj-api" }
fj-backend-cpu = { path = "../fj-backend-cpu" }
fj-ffi = { path = "../fj-ffi" }
fj-runtime = { path = "../fj-runtime" }
fj-test-utils = { path = "../fj-test-utils" }
insta = "1.47"
jsonschema = "0.42"
proptest.workspace = true
tempfile = "3.25"

[lints.clippy]
# Test patterns that are clearer than clippy's alternatives
cloned_ref_to_slice_refs = "allow"
useless_vec = "allow"
needless_range_loop = "allow"
