[package]
name = "fj-egraph"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = { workspace = true }
fj-core = { path = "../fj-core" }
smallvec = { workspace = true }

[dev-dependencies]
fj-interpreters = { path = "../fj-interpreters" }
fj-test-utils = { path = "../fj-test-utils" }
criterion = "0.5"

[[bench]]
name = "egraph_baseline"
harness = false
