[package]
name = "fj-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for FrankenJAX transforms"

[lib]
name = "frankenjax"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23" }
fj-core = { path = "../fj-core" }
fj-api = { path = "../fj-api" }
fj-trace = { path = "../fj-trace" }
fj-ad = { path = "../fj-ad" }
