[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "frankenjax"
version = "0.1.0"
description = "Python bindings for FrankenJAX - JAX-compatible transforms in Rust"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["jax", "autodiff", "machine-learning", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
