[package]
name = "fj-trace"
version = "0.1.0"
edition = "2024"

[dependencies]
fj-core = { path = "../fj-core" }
smallvec = { workspace = true }

[dev-dependencies]
fj-interpreters = { path = "../fj-interpreters" }
fj-test-utils = { path = "../fj-test-utils" }
proptest = { workspace = true }
serde_json = "1.0.149"
criterion = "0.5"

[[bench]]
name = "trace_baseline"
harness = false
